# cubesat-APDS

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.Docker.md  README.md  compose.yaml
.github/workflows/: rust.yml
benchmarks/: Cargo.toml
benchmarks/benches/: feature_extraction.rs  matching.rs
calibrator/: Cargo.toml
calibrator/src/: helpers.rs  main.rs
determinator/: Cargo.toml
determinator/src/: helpers.rs  main.rs
feature_database/: Cargo.toml
feature_database/migrations/2024-03-21-105929_level_of_detail/: down.sql  up.sql
feature_database/migrations/2024-03-21-110256_image/: down.sql  up.sql
feature_database/migrations/2024-03-21-110413_keypoint/: down.sql  up.sql
feature_database/migrations/2024-03-21-110418_descriptor/: down.sql  up.sql
feature_database/migrations/2024-05-06-095729_transform/: down.sql  up.sql
feature_database/migrations/2024-05-06-095736_elevation/: down.sql  up.sql
feature_database/src/: elevationdb.rs  imagedb.rs  keypointdb.rs  lib.rs  models.rs  schema.rs
feature_extraction/: 30.tif  31.tif  Cargo.toml
feature_extraction/src/: lib.rs
feature_extraction/src/feature_extraction/: mod.rs
geotiff_extractor/: Cargo.toml
geotiff_extractor/src/: bin.rs  lib.rs
geotiff_extractor/src/image_extractor/: mod.rs
homographier/: Cargo.toml
homographier/src/: lib.rs
homographier/src/homographier/: mod.rs
preprocessor/: Cargo.toml
preprocessor/src/: level_of_detail.rs  main.rs
resources/test/images/: 1c44ae9cb6ef495b9f7f36058ad3d295-52a2c9c8aba692bb41aeab9a2fffa8ba_getPixels.tiff  3315f12721a05aae9b16454cd0d9957a-0ae075dbfa9fa6f892ddf590ef8430ec_getPixels.tiff  63f98ea094af720ddbc5d312b2adc1e8-89b6412f6d3c089ee311a3658cd29ab7_getPixels.tiff  b3b965a1ecadd0739f3c27937b11cd98-4c6ff03ea4433bb3e17eb807ffeab109_getPixels.tiff  bd864a98958cca65fb04720d96e054a4-ed5e9578544de1780ea08c4304022d84_getPixels.tiff  cv.pgw
