[workspace]

members = ["benchmarks", "feature_database", "feature_extraction", "geotiff_extractor", "homographier"]

resolver = "2"

[workspace.lints.clippy]
# all = { level = "deny", priority = 1 }
complexity = "deny"
correctness = "deny"
perf = "deny"
unwrap_used="deny"
suspicious = "warn"
todo = "warn"
