[workspace]

members = ["benchmarks", "determinator", "calibrator", "feature_database", "feature_extraction", "geotiff_extractor", "homographier", "preprocessor"]

resolver = "2"

[workspace.lints.clippy]
# all = { level = "deny", priority = 1 }
complexity = "deny"
correctness = "deny"
perf = "deny"
unwrap_used="deny"
suspicious = "warn"
todo = "warn"
