[package]
name = "calibrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homographier = { version = "0.1.0", path="../homographier"}


clap = { version = "4.5.4", features = ["derive"] }
rgb = "0.8.37"
opencv = {version = "0.91.3",default-features = false, features = ["clang-runtime","calib3d"]}

[lints]
workspace = true
