[package]
name = "feature_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["postgres"] }
dotenvy = "0.15.7"
once_cell = "1.19.0"

[dev-dependencies]
rand = "0.8.5"
