[package]
name = "feature_extraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.88.8", features = ["clang-runtime","calib3d"]}
feature_database = { version = "0.1.0", path = "../feature_database" }

[lints]
workspace = true