[package]
name = "geotiff_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "geotiff_lib"
path = "src/lib.rs"

[dependencies]
gdal = "0.16.0"
gdal-sys = "0.9.1"
rgb = "0.8.37"


[dev-dependencies]
mockall = "0.12.1"
