[package]
name = "geotiff_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "geotiff_lib"
path = "src/lib.rs"

[[bin]]
name = "geotiff_bin"
path = "src/bin.rs"

[dependencies]
gdal = { version = "0.16.0", features = ["bindgen"] }
image = "0.24.9"
rayon = "1.9.0"

[dev-dependencies]
mockall = "0.12.1"
