[package]
name = "homographier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.91.3",default-features = false, features = ["clang-runtime","calib3d","rgb","features2d","imgproc","imgcodecs"]}
rgb = "0.8.37"

[lints]
workspace = true